# sledge

./: .env.vitest  .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierrc  .stylelintrc.json  DSL_doc_jp.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  postcss.config.cjs  repomix-output.txt  repomix-output.xml  repomix.config.json  repomix_sledge_summary.xml  sledge_0.1.0_x64_en-US.msi - ショートカット.lnk  stroke_improvement_plans.md  todo.md  todo_dsl.md  tsconfig.json  uno.config.ts  vite.config.js  vitest.config.ts  vitest.setup.ts
.codex/: AGENTS.md
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: template-bug.md  template-enhance.md  template-feature.md  template-internal-improvement.md  template-performance.md  template-ui.md  template-website.md
.github/instructions/: ecsstatic-migration.instructions.md  instruction.instructions.md
.github/workflows/: README.md  ci.yml  dev-with-artifacts.yml  dev.yml  development_build.yml  development_release.yml  release.yml  website-deploy.yml  website-production-deploy.yml  website-production.yml
.husky/: pre-commit
apps/debug_playground/: package.json  tsconfig.json  vite.config.ts
apps/debug_playground/src/: DataViewTest.tsx  index.tsx
apps/sledge/: .prettierrc  appGlobal.css  global.css  index.html  package.json  pnpm-lock.yaml  repomix.config.json  tsconfig.json  vite.config.js
apps/sledge/patches/: @thisbeyond+solid-dnd+0.7.5.patch
apps/sledge/src/: Consts.ts  app.tsx  env.d.ts  main.tsx
apps/sledge/src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
apps/sledge/src-tauri/.cargo/: config.toml
apps/sledge/src-tauri/capabilities/: default.json
apps/sledge/src-tauri/icons/: icon.icns
apps/sledge/src-tauri/src/: analysis.rs  config.rs  files.rs  image.rs  lib.rs  native.rs  project.rs  splash.rs  window.rs
apps/sledge/test/: README.md  anvilIntegration.test.ts  historyManager.test.ts  layerImageAgent.integration.test.ts  projectRoundtrip.test.ts  setupMatchers.ts  tileManager.test.ts
apps/website/: .env.production  env.d.ts  global.css  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vercel.json  vite.config.ts
apps/website/src/: App.tsx  global.css  index.tsx  styles.ts  themeAnim.css
configs/format/: prettier.config.json
configs/lint/: stylelint.config.json
configs/test/: vitest.config.ts  vitest.setup.ts
configs/ts/: tsconfig.base.json
dist-tcm/styles/: global.css.d.ts  reset.css.d.ts  section.css.d.ts  utils.css.d.ts
dist-tcm/styles/canvas/: canvas_stack.module.css.d.ts  controls.module.css.d.ts  image_pool.module.css.d.ts
dist-tcm/styles/components/: companion.module.css.d.ts  layer_preview.module.css.d.ts  light.module.css.d.ts  slider.module.css.d.ts  title_bar.module.css.d.ts  toast.module.css.d.ts
docs/adr/: 001-monorepo-scope.md  002-feature-first-structure.md
public/libs/speakjs/: speakClient.js
src/: app.css  app.css.d.ts  app.tsx  entry-server.tsx  main.tsx  repomix-output.xml
src-tauri/: Cargo.toml  repomix-output.xml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: analysis.rs  commands.rs  global_event.rs  lib.rs  splash.rs  window.rs
src-tauri/src/commands/: base64_utils.rs  brightness.rs  glitch.rs  grayscale.rs  invert.rs  jpeg_glitch.rs  mod.rs  sepia.rs
src-tauri/src/pipeline/: mod.rs  parser.rs  runner.rs
src-tauri/src/standalone/: flood_fill.rs  flood_fill_raw.rs  mod.rs
src-tauri/src/window/: open_window.rs
src/appliers/: ImageBurndownApplier.ts
src/components/: BottomInfo.tsx  EdgeInfo.tsx  SideSections.tsx  TitleBar.tsx  ToastContainer.tsx
src/components/canvas/: CanvasArea.tsx  CanvasAreaInteract.tsx  CanvasAreaOverlay.tsx  CanvasControls.tsx  CanvasDebugOverlay.tsx  CanvasStack.tsx  Controls.tsx  canvas_area.module.css  canvas_area.module.css.d.ts
src/components/canvas_settings/: CanvasSettings.tsx  canvas_settings.module.css  canvas_settings.module.css.d.ts
src/components/color/: Color.tsx  color.module.css  color.module.css.d.ts
src/components/common/: Checkbox.tsx  ColorBox.tsx  ColorPicker.tsx  CompanionAA.tsx  DSLButton.tsx  DSLEditor.tsx  Dropdown.tsx  EdgeInfo.tsx  Icon.tsx  ImportImageButton.tsx  LayerPreview.tsx  Light.tsx  PixelLineChart.tsx  RadioButton.tsx  RecentFileList.tsx  Slider.tsx  ThemeToggle.tsx  ToggleSwitch.tsx
src/components/dialogs/: ExportImage.tsx
src/components/edge_info/: EdgeInfo.tsx
src/components/global/: BottomInfo.tsx  EdgeInfo.tsx  KeyListener.tsx  Loading.tsx  RecentFileList.tsx  SectionTopMenu.tsx  SideSections.tsx  ThemeToggle.tsx  TitleBar.tsx  TopMenuBar.tsx
src/dialogs/: Dialog.tsx  ExportImage.tsx
src/dsl/: DSL.ts  DSLRunner.ts
src/io/: import.ts  project.ts  saveBlob.ts
src/models/: Commands.ts  Consts.ts  JpegGlitch.ts  Layer.ts  LayerImage.ts  Pen.ts  Pipeline.ts  Store.ts  Store.tsx
src/routes/: [...404].tsx  editor.tsx  index.tsx  start.css.ts
src/shaders/: blend.frag.glsl  fullscreen.vert.glsl
src/stores/: EditorStores.ts  GlobalStores.ts  ProjectStores.ts  Store.ts  Theme.ts  canvasStore.ts  colorStore.ts  imageStore.ts  layerStore.ts  metricStore.ts  penStore.ts
src/styles/: components.css.ts  font.css  global.css  global.css.ts  reset.css  reset.css.ts  section.css  section_global.css.ts  snippets.css.ts  tile_bar_region.css  title_bar_region.css  utils.css
src/tools/: ToolArgs.ts  ToolBase.ts  ToolBehavior.ts  Tools.ts
src/types/: Canvas.ts  FileLocation.ts  Layer.ts  LayerHistory.ts  LayerImage.ts  PaletteType.ts  Point.ts  RenderMode.ts  Tile.ts
src/utils/: BlobUtils.ts  BrushUtils.ts  ColorUtils.ts  Consts.ts  DSLUtils.ts  DataUtils.ts  DrawUtils.ts  EffectUtils.ts  EventBus.ts  EventHub.ts  ImageUtils.ts  MetricUtils.ts  PathUtils.ts  TauriUtils.ts  WindowUtils.ts  colorUtils.ts  consts.ts  export.ts  getFileId.ts  getFileNameAndPath.ts  getSuitableTileSize.ts  hexToRGB.ts  import.ts  pathUtils.ts  tauri.ts  tauriUtils.ts  windowUtils.ts
src/workers/: ToolWorker.ts
(+1093 files in other folders)
