[package]
name = "sledge"
version = "0.1.0"
description = "A playful pixel drawing tool"
authors = ["innsbluck"]
license = ""
repository = ""
edition = "2024"
rust-version = "1.86.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
log = "0.4"
sysinfo = "0.34.2"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.5.1", features = [
    "devtools",
    "protocol-asset",
    "image-png",
] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-fs = "2.2.1"
tauri-plugin-shell = "2.2.1"
tauri-plugin-system-info = "2.0.9"
tauri-plugin-opener = "2.2.6"
dirs = "6.0.0"
futures = "0.3.31"
uuid = "1.17.0"
url = "2"
tauri-plugin-log = "2.6.0"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true      # Enables link-time-optimizations.
opt-level = "s" # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort" # Higher performance by disabling panic handlers.
strip = true    # Ensures debug symbols are removed.
