[package]
name = "sledge"
version = "0.0.11-prealpha"
description = "Simply destructive drawing tool."
authors = ["innsbluck"]
license = ""
repository = "https://github.com/Innsbluck-rh/sledge"
edition = "2024"
rust-version = "1.89.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
log = "0.4.28"
sysinfo = "0.37.0"
serde_json = "1.0.145"
serde = { version = "1.0.225", features = ["derive"] }
tauri = { version = "2.8.5", features = [
    # "devtools",
    "protocol-asset",
    "image-png",
] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-fs = "2.4.2"
tauri-plugin-shell = "2.3.1"
tauri-plugin-opener = "2.5.0"
tauri-plugin-log = "2.7.0"
tauri-plugin-os = "2.3.1 "
uuid = { version = "1.18.1", features = ["v4"] }
url = "2.5.7"
tauri-plugin-process = "2.3.0 "

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.26"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

[profile.release]
codegen-units = 1 # Allows LLVM to perform better optimization.
lto = true        # Enables link-time-optimizations.
opt-level = "s"   # Prioritizes small binary size. Use `3` if you prefer speed.
panic = "abort"   # Higher performance by disabling panic handlers.
strip = true      # Ensures debug symbols are removed.
